rsbinder/src/sys/sys.rs

#[test]
fn bindgen_test_layout_binder_fd_array_object() {
    assert_eq!(
        ::std::mem::size_of::<binder_fd_array_object>(),
        32usize,
        concat!("Size of: ", stringify!(binder_fd_array_object))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_fd_array_object>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_fd_array_object))
    );
    fn test_field_hdr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_array_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).hdr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_array_object),
                "::",
                stringify!(hdr)
            )
        );
    }
    test_field_hdr();
    fn test_field_pad() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_array_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).pad) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_array_object),
                "::",
                stringify!(pad)
            )
        );
    }
    test_field_pad();
    fn test_field_num_fds() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_array_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).num_fds) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_array_object),
                "::",
                stringify!(num_fds)
            )
        );
    }
    test_field_num_fds();
    fn test_field_parent() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_array_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).parent) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_array_object),
                "::",
                stringify!(parent)
            )
        );
    }
    test_field_parent();
    fn test_field_parent_offset() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_fd_array_object>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).parent_offset) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_fd_array_object),
                "::",
                stringify!(parent_offset)
            )
        );
    }
    test_field_parent_offset();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_write_read {
    pub write_size: binder_size_t,
    pub write_consumed: binder_size_t,
    pub write_buffer: binder_uintptr_t,
    pub read_size: binder_size_t,
    pub read_consumed: binder_size_t,
    pub read_buffer: binder_uintptr_t,
}
#[test]
fn bindgen_test_layout_binder_write_read() {
    assert_eq!(
        ::std::mem::size_of::<binder_write_read>(),
        48usize,
        concat!("Size of: ", stringify!(binder_write_read))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_write_read>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_write_read))
    );
    fn test_field_write_size() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_write_read>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).write_size) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_write_read),
                "::",
                stringify!(write_size)
            )
        );
    }
    test_field_write_size();
    fn test_field_write_consumed() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_write_read>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).write_consumed) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_write_read),
                "::",
                stringify!(write_consumed)
            )
        );
    }
    test_field_write_consumed();
    fn test_field_write_buffer() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_write_read>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).write_buffer) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_write_read),
                "::",
                stringify!(write_buffer)
            )
        );
    }
    test_field_write_buffer();
    fn test_field_read_size() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_write_read>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).read_size) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_write_read),
                "::",
                stringify!(read_size)
            )
        );
    }
    test_field_read_size();
    fn test_field_read_consumed() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_write_read>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).read_consumed) as usize - ptr as usize
            },
            32usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_write_read),
                "::",
                stringify!(read_consumed)
            )
        );
    }
    test_field_read_consumed();
    fn test_field_read_buffer() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_write_read>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).read_buffer) as usize - ptr as usize
            },
            40usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_write_read),
                "::",
                stringify!(read_buffer)
            )
        );
    }
    test_field_read_buffer();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_version {
    pub protocol_version: __s32,
}
#[test]
fn bindgen_test_layout_binder_version() {
    assert_eq!(
        ::std::mem::size_of::<binder_version>(),
        4usize,
        concat!("Size of: ", stringify!(binder_version))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_version>(),
        4usize,
        concat!("Alignment of ", stringify!(binder_version))
    );
    fn test_field_protocol_version() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_version>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).protocol_version) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_version),
                "::",
                stringify!(protocol_version)
            )
        );
    }
    test_field_protocol_version();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_node_debug_info {
    pub ptr: binder_uintptr_t,
    pub cookie: binder_uintptr_t,
    pub has_strong_ref: __u32,
    pub has_weak_ref: __u32,
}
#[test]
fn bindgen_test_layout_binder_node_debug_info() {
    assert_eq!(
        ::std::mem::size_of::<binder_node_debug_info>(),
        24usize,
        concat!("Size of: ", stringify!(binder_node_debug_info))
    );
    assert_eq!(
        ::std::mem::align_of::<binder_node_debug_info>(),
        8usize,
        concat!("Alignment of ", stringify!(binder_node_debug_info))
    );
    fn test_field_ptr() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_debug_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ptr) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_debug_info),
                "::",
                stringify!(ptr)
            )
        );
    }
    test_field_ptr();
    fn test_field_cookie() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_debug_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).cookie) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_debug_info),
                "::",
                stringify!(cookie)
            )
        );
    }
    test_field_cookie();
    fn test_field_has_strong_ref() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_debug_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).has_strong_ref) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_debug_info),
                "::",
                stringify!(has_strong_ref)
            )
        );
    }
    test_field_has_strong_ref();
    fn test_field_has_weak_ref() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<binder_node_debug_info>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).has_weak_ref) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(binder_node_debug_info),
                "::",
                stringify!(has_weak_ref)
            )
        );
    }
    test_field_has_weak_ref();
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct binder_node_info_for_ref {
    pub handle: __u32,
    pub strong_count: __u32,
    pub weak_count: __u32,
    pub reserved1: __u32,
    pub reserved2: __u32,
    pub reserved3: __u32,
}
